fixed content hiding behind footer

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body  {
     background-color: pink;
+    min-height: 400px;
+    margin-bottom: 100px;
   }
 
   .cardimg{
